force-app/main/default/objects/Library_Book_Loan__c/Library_Book_Loan__c.object-meta.xml
<CustomObject>
    <label>Library Book Loan</label>
    <nameField>
        <displayFormat>LBL-{0000000}</displayFormat>
        <label>Library Book Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Library Book Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>