force-app/main/default/objects/Library_Book_Loan__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Book borrowed</description>
    <label>Book</label>
    <referenceTo>Library_Book__c</referenceTo>
    <relationshipLabel>Library Book Loans</relationshipLabel>
    <relationshipName>Library_Book_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>