force-app/main/default/objects/Library_Book_Loan__c/fields/Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Date__c</fullName>
    <description>Start date of the book loan</description>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>